[project]
name = "chunk-loader"
version = "3.0.2"
description = "Adds a chunk loader to the game that allows you to permanently load chunks!"
authors = [
    { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" }
]
dependencies = [
    "beet==0.*",
    "mecha==0.*",
    "bolt==0.*",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
